--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,8 +3,7 @@
 // modules
 
 @import 'modules/header';
-@import 'modules/footer';
-@import 'modules/buttons';
+@import 'modules/project';
 
 // base styles
 
