--- a/src/sass/var.scss
+++ b/src/sass/var.scss
@@ -1,6 +1,7 @@
 //
 // Font stacks
 $main-ff: 'Source Sans Pro', 'sans pro', 'serif';
+$secondary-ff: 'Gloria Hallelujah', 'sans pro', 'serif';
 
 //
 // Colors
