--- a/src/sass/base/base-styles.scss
+++ b/src/sass/base/base-styles.scss
@@ -41,3 +41,10 @@ img {
 h1, h2, h3, h4, h5, p{
     margin: 0;
 }
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
