--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Gloria+Hallelujah");
 .caption {
   color: orangered;
-  font-size: 6vw;
+  font-size: 6em;
   font-family: "Source Sans Pro", "sans pro", "serif";
   padding: 50px;
   line-height: 0.55; }
@@ -10,6 +10,39 @@
     text-transform: uppercase;
     font-family: "Source Sans Pro", "sans pro", "serif";
     margin-left: 2.5%; }
+
+@media screen and (max-width: 1380px) {
+  body {
+    font-size: 12px; } }
+
+@media screen and (max-width: 1065px) {
+  .caption {
+    font-size: 5em; } }
+
+@media screen and (max-width: 900px) {
+  .caption {
+    font-size: 4em; } }
+
+@media screen and (max-width: 750px) {
+  .caption {
+    font-size: 3em; } }
+
+@media screen and (max-width: 580px) {
+  .caption {
+    font-size: 2.5em;
+    padding: 25px; } }
+
+@media screen and (max-width: 500px) {
+  .caption {
+    font-size: 2em; } }
+
+@media screen and (max-width: 420px) {
+  .caption {
+    font-size: 1.8em; } }
+
+@media screen and (max-width: 340px) {
+  .caption {
+    font-size: 1.5em; } }
 
 .project-link {
   width: 70%;
@@ -56,6 +89,28 @@
   font-size: 2em;
   font-weight: 600;
   font-family: "Gloria Hallelujah", "sans pro", "serif"; }
+
+@media screen and (max-width: 750px) {
+  .project-date {
+    padding: 10px 0; }
+  .project-name {
+    font-size: 2em;
+    padding: 30px 0; }
+  .project-number {
+    padding: 10px 0px 10px 30px; }
+  .project-technology {
+    padding: 10px 30px 10px 0px; } }
+
+@media screen and (max-width: 480px) {
+  .project-name {
+    font-size: 1em;
+    padding: 20px 0 10px; }
+  .project-number {
+    padding: 10px 0px 10px 30px;
+    font-size: 1.5em; }
+  .project-technology {
+    padding: 10px 30px 10px 0px;
+    font-size: 1.5em; } }
 
 * {
   -webkit-box-sizing: border-box;
