--- a/src/sass/modules/project.scss
+++ b/src/sass/modules/project.scss
@@ -55,3 +55,33 @@
         font-family: $secondary-ff;
     }
 }
+
+@media screen and (max-width: 750px){
+   .project-date {
+       padding: 10px 0;
+   }
+   .project-name {
+       font-size: 2em;
+       padding: 30px 0;
+   }
+   .project-number {
+       padding: 10px 0px 10px 30px;
+   }
+   .project-technology {
+       padding: 10px 30px 10px 0px;
+   }
+}
+@media screen and (max-width: 480px){
+   .project-name {
+       font-size: 1em;
+       padding: 20px 0 10px;
+   }
+   .project-number {
+       padding: 10px 0px 10px 30px;
+       font-size: 1.5em;
+   }
+   .project-technology {
+       padding: 10px 30px 10px 0px;
+       font-size: 1.5em;
+   }
+}
